catalytic_table_to_struct/example/src/non_compiling_code/param_but_no_question_mark.stderr
error: proc macro panicked
  --> src/non_compiling_code/param_but_no_question_mark.rs:10:5
   |
10 |     query!("select * from test_table where b = 1 and c = 2", b);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: message: index out of bounds: the len is 0 but the index is 0
